testdata/baselines/reference/submodule/compiler/moduleResolution_explicitNodeModulesImport.errors.txt
/node_modules/foo/index.js(1,1): error TS2304: Cannot find name 'exports'.


==== /src/index.ts (0 errors) ====
    import { x } from "../node_modules/foo";
    
==== /node_modules/foo/index.js (1 errors) ====
    exports.x = 0;
    ~~~~~~~
!!! error TS2304: Cannot find name 'exports'.
    